appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- runFlow: ../auth/login-success.yaml
- runFlow: ../_shared/continue-to-summary-after-auth.yaml
- tapOn:
    id: maincore_tuindice_bottom_bar_pensum_item
- extendedWaitUntil:
    visible:
      id: pensum_screen
    timeout: 30000
- extendedWaitUntil:
    visible:
      id: pensum_node_0800-2019-degree_project-t1-math1-ma1111
    timeout: 15000
- tapOn:
    id: pensum_node_0800-2019-degree_project-t1-math1-ma1111
- extendedWaitUntil:
    visible:
      id: pensum_subject_detail_sheet
    timeout: 10000
- assertVisible:
    id: pensum_subject_detail_status
- assertVisible:
    id: pensum_subject_detail_term_value
- tapOn:
    id: base_confirmation_dialog_negative_button
- extendedWaitUntil:
    notVisible:
      id: pensum_subject_detail_sheet
    timeout: 10000
- assertVisible:
    id: pensum_focused_node_0800-2019-degree_project-t1-math1-ma1111
- tapOn:
    id: pensum_node_0800-2019-degree_project-t1-math1-ma1111
- extendedWaitUntil:
    visible:
      id: pensum_subject_detail_sheet
    timeout: 10000
- tapOn:
    text: Ver estadísticas
- extendedWaitUntil:
    visible:
      id: subjects_content
    timeout: 30000
- assertVisible:
    id: subjects_segment_students_metric
- assertVisible:
    id: subjects_segment_attempts_metric
- tapOn:
    id: maincore_tuindice_top_bar_back_button
- extendedWaitUntil:
    visible:
      id: pensum_screen
    timeout: 10000
