appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- runFlow: ../auth/login-success.yaml
- runFlow: ../_shared/continue-to-summary-after-auth.yaml
- tapOn:
    id: maincore_tuindice_bottom_bar_record_item
- extendedWaitUntil:
    visible:
      id: record_content_container
    timeout: 20000
- tapOn:
    id: record_term_chip_d377155d39da686f412622aaca9074cd
- extendedWaitUntil:
    visible:
      id: record_enrollment_proof_button
    timeout: 10000
