appId: com.gdavidpb.tuindice.debug
---
- tapOn:
    id: maincore_tuindice_bottom_bar_record_item
- extendedWaitUntil:
    visible:
      id: record_content_container
    timeout: 30000
- runFlow: ../_shared/dismiss-coachmarks-if-visible.yaml
- assertVisible:
    id: record_term_selector_row
- assertVisible:
    id: record_attempts_list
- tapOn:
    id: record_top_bar_view_mode_switch
- assertVisible:
    id: record_top_bar_view_mode_banner
- tapOn:
    id: record_top_bar_view_mode_switch
- tapOn:
    id: record_term_chip_d377155d39da686f412622aaca9074cd
- extendedWaitUntil:
    visible:
      id: record_enrollment_proof_button
    timeout: 10000
